<resources>
    <string name="app_name">DataRecovery</string>
    <string name="facebook_app_id" translatable="false">681241933033312</string>
    <string name="facebook_client_token" translatable="false">0acc7056c5129ce05110e9cf8c5f5aae</string>
    <string name="app_preferences" translatable="false">app_preferences</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_root">What is Root?</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="other_apps">Other apps</string>
    <string name="how_to_use">How to use?</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="data_recovery">Data Recovery</string>
    <string name="recover_images">Recover Images</string>
    <string name="recover_documents">Recover Documents</string>
    <string name="recover_audios">Recover Audios</string>
    <string name="recover_videos">Recover Videos</string>
    <string name="saved">Saved</string>
    <string name="phone_storage">Phone Storage</string>
    <string name="clean_up">Clean up</string>
    <string name="free_storage">Free Storage</string>
    <string name="used_storage">Used Storage</string>
    <string name="clean_junk">Clean Junk</string>
    <string name="clean_up_photos">Clean up Photos</string>
    <string name="backup">Backup</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_google_drive_for_the_data_backup_n_upload_your_restored_data_to_avoid_data_loss">Sign in to Google Drive for the data Backup.\n Upload your restored data to avoid data loss</string>
    <string name="premium_version">Premium Version</string>
    <string name="scan_images">Scan Images</string>
    <string name="scan_audios">Scan Audios</string>
    <string name="scan_vedios">Scan Videos</string>
    <string name="scan_documents">Scan Documents</string>
    <string name="no_item_selected">No Item Selected</string>
    <string name="long_press_to_select_an_image">Long press to select an image</string>
    <string name="home">Home</string>
    <string name="recover">Recover</string>
    <string name="start_scanning">Start scanning</string>
    <string name="clean_up_vedios">Clean up vedios</string>
    <string name="saved_images">Saved Images</string>
    <string name="saved_audios">Saved Audios</string>
    <string name="saved_vedios">Saved Videos</string>
    <string name="saved_documents">Saved Documents</string>
    <string name="recover_image">Recover Image</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="AUTH_ID">AIzaSyAQg7VQ3YwBW4Gpn1OelvmS6xDqyRAwSJc</string>
    <string name="all_scan">All Scan</string>
    <string name="images">Images</string>
    <string name="contacts">Contacts</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="group_no">Group No</string>
    <string name="image_name">Image Name</string>
    <string name="image_size">Image Size</string>
    <string name="image_path">Image Path</string>
    <string name="no_duplicates_found">No Duplicates Found !</string>
    <string name="scan_all">Scan All</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="total_files_scanned">Total Files Scanned</string>
    <string name="no_files_found">No Files Found.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_delete_junk_files">Do you want to delete junk files?</string>
    <string name="clean_junk_files">Clean junk files successfully.</string>
    <string name="something_went_wrong">Something went wrong.Please try again later...</string>
    <string name="files_scanned"> Files scanned</string>
    <string name="files"> Files</string>
    <string name="audios_found"> Audios found</string>
    <string name="files_found">Files found</string>
    <string name="allow_permission_storage">Allow permission for storage access!</string>
    <string name="recoverable_files_found">Recoverable files found</string>
    <string name="snackbar_text">"Recovered Successfully\nLocation:/storage/emulated/0/pictures/\nDataRecovery"</string>
    <string name="try_again_later">Something went wrong.Please try again later...</string>
    <string name="no_image_selected">No image selected</string>
    <string name="all_files_deleted">All files deleted successfully</string>
    <string name="no_file_selected">No File selected</string>
    <string name="drive_login_error">Signin error - not logged in</string>
    <string name="documents_found">Documents found</string>
    <string name="files_uploaded">Files has been uploaded successfully</string>
    <string name="images_found">Images found</string>
    <string name="recover_image_successfully">Recover image successfully</string>
    <string name="image_deleted_successfully">Image deleted successfully</string>
    <string name="all_files_recover_successfully">All files recover successfully</string>
    <string name="videos_found"> Videos found</string>
    <string name="allow_permission_for_read_contacts">Allow permission for read contacts!</string>
    <string name="video_completed">Video completed</string>
    <string name="error_playing_error">An Error Occurred While Playing Video !!!</string>
    <string name="group">Group</string>
    <string name="sort_by_size_asc">Sort by size(asc)</string>
    <string name="sort_by_size_desc">Sort by size(desc)</string>
    <string name="sort_by_date_asc">Sort by date(asc)</string>
    <string name="sort_by_date_desc">Sort by date(desc)</string>
    <string name="scanning_please_wait">Scanning please wait</string>
    <string name="got_it">GOT IT!</string>
    <string name="delete_hint">Touch and hold to select multiple images,then tap delete button to permanently delete them.</string>
    <string name="recover_deleted_photos_videos">Recover Deleted Photos &amp; Videos</string>
    <string name="version">Version</string>
    <string name="contact_us">Contact us</string>
    <string name="welcome_to_data_recovery_app_the_ultimate_solution_for_recovering_and_restoring_deleted_photos_videos_audios_and_contacts_on_your_phone_with_our_powerful_app_you_can_effortlessly_retrieve_your_precious_memories_and_important_data_we_also_offer_a_seamless_backup_feature_to_keep_your_content_safe_our_user_friendly_interface_and_advanced_scanning_capabilities_ensure_a_hassle_free_experience_even_for_non_tech_savvy_users_your_privacy_and_security_are_our_top_priorities_and_we_handle_your_data_with_utmost_care_join_our_satisfied_users_and_download_data_recovery_app_today_to_never_worry_about_losing_your_valuable_content_again">Welcome to Data Recovery App, the ultimate solution for recovering and restoring deleted photos, videos, audios, and contacts on your phone. With our powerful app, you can effortlessly retrieve your precious memories and important data. We also offer a seamless backup feature to keep your content safe. Our user-friendly interface and advanced scanning capabilities ensure a hassle-free experience, even for non-tech-savvy users. Your privacy and security are our top priorities, and we handle your data with utmost care. Join our satisfied users and download Data Recovery app today to never worry about losing your valuable content again.</string>
    <string name="close">Close</string>
    <string name="duplicate_file_remover">Duplicate File Remover</string>
    <string name="what_is_rooting">What is rooting?</string>
    <string name="rooting_involves_gaining_administrative_privileges_on_an_android_device_allowing_users_to_access_and_modify_system_files_and_settings_it_is_typically_achieved_through_the_use_of_specialized_software_or_tools_however_there_is_a_risk_of_root_attempts_failing_resulting_in_the_inability_to_gain_root_access_successfully">Rooting involves gaining administrative privileges on an Android device, allowing users to access and modify system files and settings. It is typically achieved through the use of specialized software or tools. However, there is a risk of root attempts failing, resulting in the inability to gain root access successfully.</string>
    <string name="benefits">Benefits:</string>
    <string name="unlocking_advanced_customization_and_system_level_access">Unlocking advanced customization and system-level access.</string>
    <string name="risks">Risks:</string>
    <string name="potential_for_security_vulnerabilities_and_voiding_device_warranty">Potential for security vulnerabilities and voiding device warranty.</string>
    <string name="process">Process:</string>
    <string name="using_software_or_tools_to_attain_root_access">Using software or tools to attain root access.</string>
    <string name="implications">Implications:</string>
    <string name="ability_to_modify_system_files_install_custom_roms_and_use_root_only_apps">Ability to modify system files, install custom ROMs, and use root-only apps.</string>
    <string name="considerations">Considerations:</string>
    <string name="researching_device_compatibility_and_following_instructions_carefully">Researching device compatibility and following instructions carefully.</string>
    <string name="data_recovery_pro">DATA RECOVERY PRO</string>
    <string name="a_data_recovery_application_is_designed_to_assist_users_in_retrieving_recently_deleted_media_files_upon_initiating_a_scan_the_application_diligently_examines_the_storage_device_and_retrieves_all_available_files_including_both_deleted_and_non_deleted_ones_subsequently_the_user_is_required_to_identify_and_locate_the_specific_deleted_file_from_the_comprehensive_list_of_retrieved_files_this_process_necessitates_thorough_scrutiny_to_pinpoint_and_recover_the_desired_deleted_media_item_among_the_entirety_of_retrieved_data">A data recovery application is designed to assist users in retrieving recently deleted media files. Upon initiating a scan, the application diligently examines the storage device and retrieves all available files, including both deleted and non-deleted ones. Subsequently, the user is required to identify and locate the specific deleted file from the comprehensive list of retrieved files. This process necessitates thorough scrutiny to pinpoint and recover the desired deleted media item among the entirety of retrieved data.</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="done">Done</string>
    <string name="step_1">Step 1</string>
    <string name="go_to_the_recover_tab_and_choose_the_category_to_recover">Go to the Recover tab and choose the category to recover.</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="long_press_to_select_multiple_files_then_tap_recover_to_save">Long-press to select multiple files, then tap Recover to save.</string>
    <string name="tap_image_to_preview_recover_or_delete_individually">Tap image to preview, recover, or delete individually.</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="start_like_a_pro">START LIKE A PRO</string>
    <string name="unlock_all_features">Unlock all features</string>
    <string name="basic">Basic</string>
    <string name="premium">Premium</string>
    <string name="gallery_recovery">Gallery Recovery</string>
    <string name="themes">Themes</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="no_ads">No Ads</string>
    <string name="remove_duplicate_files">Remove Duplicate Files</string>
    <string name="pkr_16_2000_year_after_free_7_day_trial">PKR 16,2000/Year after FREE 7 day trial</string>
    <string name="start_free_trial">Start FREE Trial</string>
    <string name="loading_ad">Loading AD</string>
</resources>