<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    tools:context=".views.activities.AboutUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/border">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/backIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_backarrow"
                android:tint="?text_color"
                android:padding="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/backIV"
                app:layout_constraintBottom_toBottomOf="@id/backIV"
                app:layout_constraintStart_toEndOf="@id/backIV"
                android:text="@string/what_is_root"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/backIV"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/what_is_rooting"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/rooting_involves_gaining_administrative_privileges_on_an_android_device_allowing_users_to_access_and_modify_system_files_and_settings_it_is_typically_achieved_through_the_use_of_specialized_software_or_tools_however_there_is_a_risk_of_root_attempts_failing_resulting_in_the_inability_to_gain_root_access_successfully"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"/>
            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t2"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/benefits"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/versionTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/unlocking_advanced_customization_and_system_level_access"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/versionTv"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/risks"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/contactTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t4"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/potential_for_security_vulnerabilities_and_voiding_device_warranty"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/contactTv"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/process"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t5"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/using_software_or_tools_to_attain_root_access"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv6"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/implications"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/tv8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/ability_to_modify_system_files_install_custom_roms_and_use_root_only_apps"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv8"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/considerations"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/tv10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/researching_device_compatibility_and_following_instructions_carefully"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/border"
        android:background="?text_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/native_ad_layout"/>
    <FrameLayout
        android:id="@+id/native_ad_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/border1"
        android:layout_marginBottom="@dimen/_10sdp"/>
    <TextView
        android:id="@+id/adsLoadingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/native_ad_layout"
        app:layout_constraintBottom_toBottomOf="@id/native_ad_layout"
        app:layout_constraintStart_toStartOf="@id/native_ad_layout"
        app:layout_constraintEnd_toEndOf="@id/native_ad_layout"
        android:text="@string/loading_ad"
        android:visibility="gone"
        android:textColor="?text_color"
        android:fontFamily="@font/poppins_bold"/>

    <View
        android:id="@+id/border1"
        android:background="?text_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>