<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#D2C7C2"
    android:padding="@dimen/_10sdp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/do_you_want_to_delete_junk_files"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/poppins_regular"/>

    <TextView
        android:id="@+id/noTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/yesTv"
        app:layout_constraintBottom_toBottomOf="@id/yesTv"
        app:layout_constraintEnd_toStartOf="@id/yesTv"
        android:text="@string/no"
        android:textColor="@color/black"
        android:layout_marginEnd="@dimen/_15sdp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_12ssp"/>
    <TextView
        android:id="@+id/yesTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/yes"
        android:textColor="@color/blue"
        android:layout_margin="@dimen/_5sdp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_12ssp"/>

</androidx.constraintlayout.widget.ConstraintLayout>