<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    tools:context=".views.activities.AboutUsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/backIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_backarrow"
                android:tint="?text_color"
                android:padding="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/backIV"
                app:layout_constraintBottom_toBottomOf="@id/backIV"
                app:layout_constraintStart_toEndOf="@id/backIV"
                android:text="@string/about"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/backIV"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/data_recovery"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t1"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/recover_deleted_photos_videos"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_15sdp"/>
            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t2"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/version"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/versionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t3"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/recover_deleted_photos_videos"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/versionTv"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/contact_us"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/contactTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t4"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/recover_deleted_photos_videos"
                android:textColor="?text_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_15sdp"/>
            <TextView
                android:id="@+id/desTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/contactTv"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/welcome_to_data_recovery_app_the_ultimate_solution_for_recovering_and_restoring_deleted_photos_videos_audios_and_contacts_on_your_phone_with_our_powerful_app_you_can_effortlessly_retrieve_your_precious_memories_and_important_data_we_also_offer_a_seamless_backup_feature_to_keep_your_content_safe_our_user_friendly_interface_and_advanced_scanning_capabilities_ensure_a_hassle_free_experience_even_for_non_tech_savvy_users_your_privacy_and_security_are_our_top_priorities_and_we_handle_your_data_with_utmost_care_join_our_satisfied_users_and_download_data_recovery_app_today_to_never_worry_about_losing_your_valuable_content_again"
                android:textColor="?text_color"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/closeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="?text_color"
                android:layout_marginHorizontal="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/desTv"
                android:gravity="center"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/close"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>